@@ -3,7 +3,10 @@ Changes in version 0.8
 
 STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 
-* No changes recorded.
+* Issue 74: Changed the kyuafile(5) parser to automatically discover
+  existing tester interfaces.  The various *_test_program() functions
+  will now exist (or not) based on tester availability, which simplifies
+  the addition of new testers or the selective installation of them.
 
 
 Changes in version 0.7
